--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,11 @@ jobs:
         image:
           - debian:11
           - debian:12
+          - ubuntu:20.04
           - ubuntu:22.04
+        python_version:
+          - "3.10.11"
+          - "3.11.3"
         ansible-version:
           - '6.7'
         scenario:
@@ -76,11 +80,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'ansible-kimai'
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: 🐍 set up python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "${{ matrix.python_version }}"
 
       - name: install dependencies
         run: |
