--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,24 +1,25 @@
 ---
 
 - name: snapd
-  src: bodsch.snapd
+  src: https://github.com/bodsch/ansible-snapd
   version: 1.2.2
 
 - name: apparmor
-  src: bodsch.apparmor
+  src: https://github.com/bodsch/ansible-apparmor
   version: 2.0.0
 
 - name: php-fpm
-  src: bodsch.php
+  src: https://github.com/bodsch/ansible-php
   version: 2.2.0
 
 - name: mariadb
-  src: bodsch.mariadb
-  version: 2.4.0
+  src: https://github.com/bodsch/ansible-mariadb
+  version: 2.4.1
 
 - name: nginx
-  src: bodsch.nginx
-  version: 0.22.1
+  src: https://github.com/bodsch/ansible-nginx
+  scm: git
+  version: 0.25.0
 
 - name: composer
   src: geerlingguy.composer
