--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ defaults:
   run:
     working-directory: 'ansible-kimai'
 
+env:
+  PY_COLORS: '1'
+  ANSIBLE_FORCE_COLOR: '1'
+
 jobs:
   # arch:
   #   name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
@@ -56,22 +60,19 @@ jobs:
   #         DISTRIBUTION: ${{ matrix.image }}
 
   deb:
-    name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
-    runs-on: ubuntu-20.04
+    name: "${{ matrix.image }} / ansible ${{ matrix.ansible-version }} / python ${{ matrix.python_version }}"
+    runs-on: ubuntu-22.04
     if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
     strategy:
       fail-fast: false
       matrix:
         image:
-          - debian:11
           - debian:12
-          - ubuntu:20.04
-          - ubuntu:22.04
         python_version:
-          - "3.10.11"
-          - "3.11.3"
+          - "3.10"
+          - "3.11"
         ansible-version:
-          - '6.7'
+          - '8.5'
         scenario:
           - default
 
@@ -92,6 +93,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r test-requirements.txt
 
+      - name: force reinstall of community.docker
+        run: |
+          mkdir -p /home/runner/.ansible/collections
+          ansible-galaxy collection install community.docker --force
+
       - name: teardown apparmor
         run: |
           if [ -e /usr/sbin/aa-teardown ]; then /usr/sbin/aa-teardown; fi
@@ -103,7 +109,55 @@ jobs:
             -e TOX_SCENARIO="${{ matrix.scenario }}" \
             -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
             -e DISTRIBUTION="${{ matrix.image }}"
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          DISTRIBUTION: ${{ matrix.image }}
+
+  ubuntu:
+    name: "${{ matrix.image }} / ansible ${{ matrix.ansible-version }} / python ${{ matrix.python_version }}"
+    runs-on: ubuntu-22.04
+    if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - ubuntu:22.04
+          - ubuntu:24.04
+        python_version:
+          - "3.10"
+          - "3.11"
+        ansible-version:
+          - '8.5'
+        scenario:
+          - default
+
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v4
+        with:
+          path: 'ansible-kimai'
+          ref: ${{ github.event.workflow_run.head_branch }}
+
+      - name: 🐍 set up python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.python_version }}"
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r test-requirements.txt
+
+      - name: force reinstall of community.docker
+        run: |
+          mkdir -p /home/runner/.ansible/collections
+          ansible-galaxy collection install community.docker --force
+
+      - name: teardown apparmor
+        run: |
+          if [ -e /usr/sbin/aa-teardown ]; then /usr/sbin/aa-teardown; fi
+
+      - name: test with tox
+        run: |
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
