--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -13,6 +13,9 @@
         - name: update pacman system
           ansible.builtin.command: |
             pacman --refresh --sync --sysupgrade --noconfirm
+          register: pacman
+          changed_when: pacman.rc != 0
+          failed_when: pacman.rc != 0
 
         - name: create depends service
           ansible.builtin.copy:
@@ -50,7 +53,6 @@
   gather_facts: true
 
   roles:
-    - role: apparmor
     - role: snapd
     - role: mariadb
 
