--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,41 @@
 ---
+
 name: CI
 
 on:
-  workflow_run:
-    workflows:
-      - "code linter"
-    types:
-      - completed
+  schedule:
+    - cron: "50 3 * * 0"
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
+  push:
+    branches:
+      - 'feature/**'
+      - 'fix/**'
+      - '!doc/**'
+    paths:
+      - 'plugins/**'
+      - '!roles/**'
+      - '!hooks/**'
+      - '.config/pycodestyle.cfg'
+  pull_request:
+    branches:
+      - 'feature/**'
+      - 'fix/**'
+      - '!doc/**'
+    paths:
+      - 'plugins/**'
+      - '!roles/**'
+      - '!hooks/**'
+      - '.config/pycodestyle.cfg'
 
 defaults:
   run:
@@ -59,10 +88,9 @@ jobs:
   #         ANSIBLE_FORCE_COLOR: '1'
   #         DISTRIBUTION: ${{ matrix.image }}
 
-  deb:
+  debian:
     name: "${{ matrix.image }} / ansible ${{ matrix.ansible-version }} / python ${{ matrix.python_version }}"
     runs-on: ubuntu-22.04
-    if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
     strategy:
       fail-fast: false
       matrix:
