--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -55,6 +55,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix:
+        python_version:
+          - "3.11"
+          - "3.12"
 
     steps:
       - name: check out the codebase.
@@ -65,7 +69,7 @@ jobs:
       - name: set up python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "${{ matrix.python_version }}"
 
       - name: install yamllint
         run: |
@@ -97,7 +101,7 @@ jobs:
           python3 -m pip install ansible-lint
 
       - name: run ansible lint
-        run:
-          ansible-lint .
+        run: |
+          ansible-lint --project-dir $PWD --show-relpath --exclude molecule
 
 ...
