changes on linter workflow

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -102,6 +102,6 @@ jobs:
 
       - name: run ansible lint
         run: |
-          ansible-lint --project-dir $PWD --show-relpath --exclude molecule
+          ansible-lint --project-dir $PWD --show-relpath --exclude molecule --exclude .github
 
 ...
