--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -62,5 +62,5 @@
 
   roles:
     - role: nginx
-    - role: php-fpm
-    - role: composer
+    - role: bodsch.php.fpm
+    - role: bodsch.php.composer
