changes on galaxy workflow

--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -4,13 +4,23 @@ name: push to ansible galaxy
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows:
-      - "CI"
-    branches:
-      - main
-    types:
-      - completed
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
+  # workflow_run:
+  #   workflows:
+  #     - "CI"
+  #   branches:
+  #     - main
+  #   types:
+  #     - completed
 
 jobs:
   galaxy:
